--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -1,22 +1,13 @@
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
     <div class="card mb-4">
-    <div x-data="postsState()" x-init="initData()">
-                            <h5 x-text="message"></h5>
-                            <button @click="getPost()">def</button>
-                            <div class="mt-5">
-                                <template x-for="post in posts" :key="post.id">
-                                    <h6 x-text="post.title"></h6>
-                                </template>
-                            </div>
-                        </div>
         <div class="form-grid-2 mb-4">
             <div>
                 <h5 class="mb-2">Información de la persona a enviar</h5>
                 <p>El paquete no debe superar los <span class="h6">5kg</span> y las dimensiones de <span class="h6">30x30x30cm</span>.</p>
             </div>
             <div>
-                <a class="btn btn-default" id="complete-info-me">Completar con {% if request.user.is_client %}mi infomación{% else %} la información del cliente {% endif %}</a>
+                <a class="btn btn-default" id="complete-info-me">Completar con {% if request.user.is_client %}mi información{% else %} la información del cliente {% endif %}</a>
             </div>
         </div>
         <div class="form-grid-2">
@@ -120,22 +111,6 @@
 
 {% block scripts %}
 <script type="text/javascript" >
- function postsState(){
-            return {
-                posts: [], 
-                message: 'Hello fow',
-                initData(){
-                    fetch('https://jsonplaceholder.typicode.com/posts?page=1')
-                        .then(res => res.json())
-                        .then(data => { 
-                            this.posts = data;
-                        });
-                },
-                getPost(){
-                    console.log(this.posts)
-                },
-            }
-        }
     {% if request.user.is_authenticated %}
         var btnCompleteInfoMe = document.getElementById('complete-info-me');
         var selectOriginAddress = document.getElementById('origin_addressess');
