--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -153,7 +153,7 @@
                 <p class="text-small text-muted font-normal"># TRACKING {{ order.tracking_code }}</p>
                 <h6>{{ order.client.full_name }}</h6>
                 <div class="order-detail">
-                    <p>{{ order.created_at|timesince }}</p>
+                    <p>Hace {{ order.created_at|timesince }}</p>
                     <p>&middot;</p>
                     {% include "orders/snippets/status.html" %}
                 </div>
