--- a/drivers/templates/vehicles/edit.html
+++ b/drivers/templates/vehicles/edit.html
@@ -1,19 +1,19 @@
-{% extends "layouts/pages.html" %} {% block title %}
-<title>Cuy Click Perú - Editar moto</title>
+{% extends "layouts/admin.html" %}
+{% block title %}
+<title>Cuy Click Perú - {{ title }}</title>
 {% endblock title %}
-{% block content %}
-<h2>Editar moto</h2>
-<form method="post">
-  {% csrf_token %} {% for field in form %}
-  <div class="form-group">
-    {{ field.label_tag }} {{ field }}
-    {% if field.errors %}
-    <div class="text-invalid">{{ field.errors }}</div>
-    {% endif %}
+{% block content_head %}
+<div class="content-head">
+  <div class="left">
+      <a href="{{ request.GET.next }}" class="btn btn-link btn-small">
+        <i class='bx bx-left-arrow-alt bx-sm'></i>
+      </a>
+      <h4>{{ title }}</h4>
   </div>
-  {% endfor %}
-  <button type="submit" class="btn">Editar</button>
-  <a href="{{ request.GET.next }}">Cancelar</a>
-</form>
-
+</div>
+{% endblock content_head %}
+{% block content %}
+<div class="card card-form mb-10">
+  {% include "vehicles/snippets/form.html" with btnText='Editar' %}
+</div>  
 {% endblock content %}
