--- a/static/css/components/card.css
+++ b/static/css/components/card.css
@@ -14,7 +14,7 @@
 
 .actions{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
     margin-top: 30px;
@@ -22,8 +22,8 @@
 .actions > :not(template) ~ :not(template) {
     /* margin-left: -15px; -1rem or 1rem */
     --space-x-reverse: 0;
-    margin-bottom: calc(1rem * var(--space-x-reverse));
-    margin-top: calc(1rem * (1 - var(--space-x-reverse)));
+    margin-top: calc(1rem * var(--space-x-reverse));
+    margin-bottom: calc(1rem * (1 - var(--space-x-reverse)));
     margin-left: 0;
     margin-right: 0;
     flex: content;
