--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -4,63 +4,70 @@
         <img src="{% static 'img/logo.png' %}" alt="Cuy Click - Perú" class="logo">
     </div>
     <ul class="sidebar-menu">
-        <li class="{% if request.path == '/dashboard/' %}active{% endif %}">
-            <a href="{% url 'dash' %}">                       
-                <i class='bx bx-line-chart bx-sm'></i>
-                <span>Dashboard</span>
-            </a>
-        </li>
-        <li class="{% if request.path == '/orders/' %}active{% endif %}">
-            <a href="{% url 'orders:index' %}">
-                
-                <i class='bx bx-trip bx-sm'></i>
-                <span>Pedidos</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                
-                <i class='bx bxs-report bx-sm'></i>
-                <span>Reporte</span>
-            </a>
-        </li>
+        {% for menu in menu_list %}
+            {% if menu.permission %}
+            <li class="{% if menu.path == request.path %}active{% endif %}">
+                <a href="{{ menu.path }}">
+                    
+                    {% if menu.icon %}
+                    <i class='bx {{ menu.icon }} bx-sm'></i>
+                    {% else %}
+                    <img src="{{ menu.img }}" alt="{{ menu.title }}">
+                    {% endif %}
+                    <span>{{ menu.title }}</span>
+                </a>
+            </li>
+            {% elif menu.permission is None %}
+            <li class="{% if menu.path == request.path %}active{% endif %}">
+                <a href="{{ menu.path }}">
+                    
+                    {% if menu.icon %}
+                    <i class='bx {{ menu.icon }} bx-sm'></i>
+                    {% else %}
+                    <img src="{{ menu.img }}" alt="{{ menu.title }}">
+                    {% endif %}
+                    <span>{{ menu.title }}</span>
+                </a>
+            </li> 
+            {% endif %}
+        {% endfor %}
     </ul>            
 </aside>
 
 <ul class="tabbar">
-    <li class="{% if request.path == '/dashboard/' %}active{% endif %}">
+    {% comment %} <li class="{% if request.path == '/dashboard/' %}active{% endif %}">
         <a href="{% url 'dash' %}">
             
             <i class='bx bx-line-chart bx-sm'></i>
             <span>Dashboard</span>
         </a>
-    </li>
-    <li>
-        <a href="#">
-            
-            <i class='bx bx-trip bx-sm'></i>
-            <span>Pedidos</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            
-            <i class='bx bxs-report bx-sm'></i>
-            <span>Reporte</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            
-            <i class='bx bxs-report bx-sm'></i>
-            <span>Reporte</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            
-            <i class='bx bxs-report bx-sm'></i>
-            <span>Reporte</span>
-        </a>
-    </li>
+    </li> {% endcomment %}
+    
+    {% for menu in menu_list %}
+            {% if menu.permission %}
+            <li class="{% if menu.path == request.path %}active{% endif %}">
+                <a href="{{ menu.path }}">
+                    
+                    {% if menu.icon %}
+                    <i class='bx {{ menu.icon }} bx-sm'></i>
+                    {% else %}
+                    <img src="{{ menu.img }}" alt="{{ menu.title }}">
+                    {% endif %}
+                    <span>{{ menu.title }}</span>
+                </a>
+            </li>
+            {% elif menu.permission is None %}
+            <li class="{% if menu.path == request.path %}active{% endif %}">
+                <a href="{{ menu.path }}">
+                    
+                    {% if menu.icon %}
+                    <i class='bx {{ menu.icon }} bx-sm'></i>
+                    {% else %}
+                    <img src="{{ menu.img }}" alt="{{ menu.title }}">
+                    {% endif %}
+                    <span>{{ menu.title }}</span>
+                </a>
+            </li> 
+            {% endif %}
+        {% endfor %}
 </ul>
