--- a/static/css/components/buttons.css
+++ b/static/css/components/buttons.css
@@ -10,8 +10,13 @@
     cursor: pointer;
     text-decoration: none;
     font-size: inherit;
-    display: inline-block;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.btn i{
+    margin-right: 5px;
 }
 .btn:hover, .btn-circle:hover {
     opacity: .8;
