--- a/orders/templates/orders/payment-success.html
+++ b/orders/templates/orders/payment-success.html
@@ -6,7 +6,7 @@
 <div class="content-head"></div>
 {% endblock content_head %}
 {% block content %}
- <div class="card card-form card-delete mt-6 mb-10" style="width: 50% !important;">
+ <div class="card card-form card-message mt-6 mb-10">
     <div class="mb-4 flex justify-start">
         <div class="icon icon-success icon-cicle icon-xl">
           <i class='bx bx-check-circle bx-xl'></i>
