--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -149,13 +149,14 @@
             <div class="icon icon-warning-default rounded rounded-md">
                 <img src="{% static 'img/icon/order-icon.svg' %}"/>
             </div>
-            <div class="content">
+            <div class="content" style="align-items: flex-start;">
                 <p class="text-small text-muted font-normal"># TRACKING {{ order.tracking_code }}</p>
                 <h6>{{ order.client.full_name }}</h6>
                 <div class="order-detail">
-                    <p>Hace {{ order.created_at|timesince }}</p>
-                    <p>&middot;</p>
                     {% include "orders/snippets/status.html" %}
+                    <p>&middot;</p>
+                    {% comment %} <p>Hace {{ order.created_at|timesince }}</p> {% endcomment %}
+                    <p>{{ order.created_at|naturaltime }}</p>
                 </div>
             </div>
             {% if perms.orders.view_order %}
@@ -165,12 +166,20 @@
             {% endif %}
         </div>
         <div class="order-list-col">
+            {% if order.get_first_detail.address_origin %}
             <h6>{{ order.get_first_detail.address_origin.address }}</h6>
             <p>{{ order.get_first_detail.address_origin.address_city }}</p>
+            {% else %}
+            <p class="text-small">Dirección no disponible</p>
+            {% endif %}
         </div>
         <div class="order-list-col">
+            {% if order.get_first_detail.address_destiny %}
             <h6>{{ order.get_first_detail.address_destiny.address }}</h6>
             <p>{{ order.get_first_detail.address_destiny.address_city }}</p>
+            {% else %}
+            <p class="text-small">Dirección no disponible</p>
+            {% endif %}
         </div>
         <div class="order-list-col actions">
             {% if perms.orders.view_order %}
