--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,8 @@ body{
     --btn-default-color: rgb(0, 0, 0, .05);
     --bg-primary-color: #FAFAFA;
     --bg-secondary-color: white;
+    --filter-primary-color: invert(11%) sepia(63%) saturate(5903%) hue-rotate(257deg) brightness(73%) contrast(126%);
+    --filter-secondary-color: invert(62%) sepia(7%) saturate(92%) hue-rotate(219deg) brightness(93%) contrast(85%);
     background: var(--bg-primary-color);
     font-size: 15px;
     font-family: 'Rubik', Arial, Helvetica, sans-serif;
@@ -29,6 +31,8 @@ body.dark{
     --btn-default-color: rgba(255, 255, 255, 0.15);
     --bg-primary-color: #2c2c2c;
     --bg-secondary-color: #414141;
+    --filter-primary-color: invert(100%) sepia(100%) saturate(9%) hue-rotate(167deg) brightness(103%) contrast(105%);;
+    --filter-secondary-color: invert(62%) sepia(7%) saturate(92%) hue-rotate(219deg) brightness(93%) contrast(85%);
     /* blue */
     /* --bg-primary-color: #1f1c2f;
     --bg-secondary-color: #292448; */
