--- a/static/css/components/buttons.css
+++ b/static/css/components/buttons.css
@@ -10,7 +10,7 @@
     cursor: pointer;
     text-decoration: none;
     font-size: inherit;
-    display: flex;
+    display: inline-flex;
     text-align: center;
     justify-content: center;
     align-items: center;
