--- a/static/css/components/tabbar.css
+++ b/static/css/components/tabbar.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     color: var(--text-secondary-color);
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 500;
 }
 .page-admin .tabbar li a i{
@@ -31,6 +31,13 @@
 .page-admin .tabbar li.active a i{
     color: rgb(var(--title-color));
     font-weight: 600;
+}
+.page-admin .tabbar li a img{
+    filter: var(--filter-primary-color) opacity(60%);
+    margin-bottom: 8px;
+}
+.page-admin .tabbar li.active a img{
+    filter: var(--filter-primary-color);
 }
 
 @media (min-width: 1140px) { 
