Add payment account

--- a/drivers/templates/drivers/create.html
+++ b/drivers/templates/drivers/create.html
@@ -36,7 +36,7 @@
       {% endfor %}
     <div class="actions right mt-5">
       <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
-      <button type="submit" class="btn btn-primary">Guardar</button>
+      <button type="submit" class="btn btn-primary">Continuar</button>
     </div>
   </form>
 </div>
