--- a/drivers/templates/drivers/index.html
+++ b/drivers/templates/drivers/index.html
@@ -103,7 +103,7 @@
                   {% endif %}
                 </div>
             </div>
-            <div class="table-list-col actions">
+            <div class="table-list-col actions m-0">
               {% if perms.drivers.view_driver %}
                 <a href="{% url 'drivers:detail' driver.slug %}" class="btn btn-link btn-small">Ver</a>
               {% endif %}
