--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -147,7 +147,7 @@
     <div class="card order-list-row">
         <div class="order-list-col">
             <div class="icon icon-warning-default rounded rounded-md">
-                <img src="{% static 'img/icon/order-icon.svg' %}"/>
+                <img src="{% static 'icon/order-icon.svg' %}"/>
             </div>
             <div class="content" style="align-items: flex-start;">
                 <p class="text-small text-muted font-normal"># TRACKING {{ order.tracking_code }}</p>
