--- a/authentication/templates/auth/complete-info.html
+++ b/authentication/templates/auth/complete-info.html
@@ -5,10 +5,52 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="container-auth medium">
+  <div class="container mt-6">
+    <div class="step-wrapper">
+      <div class="step success">
+          <div class="step-icon-wrapper">
+              <div class="step-icon">
+                  <i class='bx bx-check bx-sm' ></i>
+              </div> 
+              <div class="step-progress-desktop"></div>
+          </div> 
+          <div class="step-content">
+              <div class="text-small caption">Paso 1</div>
+              <h6>Crear una cuenta</h6>
+          </div>
+          <div class="step-progress-mobile"></div>
+      </div>
+      <div class="step active">
+          <div class="step-icon-wrapper">
+              <div class="step-icon">
+                  <i class='bx bx-user-pin bx-sm' ></i>
+              </div> 
+              <div class="step-progress-desktop"></div>
+          </div> 
+          <div class="step-content">
+              <div class="text-small caption">Paso 2</div>
+              <h6>Completa tu información</h6>
+          </div>
+          <div class="step-progress-mobile"></div>
+      </div>
+      <div class="step">
+          <div class="step-icon-wrapper">
+              <div class="step-icon">
+                  <i class='bx bx-current-location bx-sm' ></i>
+              </div> 
+              <div class="step-progress-desktop"></div>
+          </div> 
+          <div class="step-content">
+              <div class="text-small caption">Paso 3</div>
+              <h6>Completa tu dirección</h6>
+          </div>
+          <div class="step-progress-mobile"></div>
+      </div>
+  </div>
+  </div>
+  <div class="container-auth medium" style="padding-top: 0;">
     {% include "partials/message.html" %}
 
-    <h5 class="text-left">Completa tu información</h5>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
