--- a/templates/layouts/auth.html
+++ b/templates/layouts/auth.html
@@ -8,12 +8,13 @@
     {% block title %}
     <title>Cuy Click Perú - Courier</title>
     {% endblock title %}
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="{% static 'vendors/boxicons/css/boxicons.min.css' %}" rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   </head>
   <body>
     {% block content %} {% endblock content %}
+    {% block scripts %} {% endblock scripts %}
   </body>
 </html>
