--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,9 +1,205 @@
-{% extends "layouts/pages.html" %} {% block title %}
+{% extends "layouts/pages.html" %}
+{% block title %}
 <title>Cuy Click Perú - Inicio</title>
-{% endblock title %} {% load i18n %} {% block content %}
-<h1>Registra un pedido</h1>
+{% endblock title %}
+{% load i18n %}
+{% load env_extras %}
+{% block content %}
 {% if request.user.is_authenticated %}
 <a href="{% url 'auth:logout' %}" class="btn">Salir</a>
 {% translate "This is the title." noop %} {% else %}
 <a href="/auth/login" class="btn">Login</a>
-{% endif %} {% endblock content %}
+{% endif %}
+<h3>Consulta tu pedido</h3>
+<div class="flex container">
+    <div id="map"></div>
+    <div class="card-form" style="width: 30%;">
+        <form id="form-address">
+            <div class="form-group">
+                <label for="origin_address">Direccion de recojo</label>
+                <input type="text" class="input" id="origin_address" placeholder="Ingrese su direccion">
+                <input type="hidden" id="origin">
+            </div>
+            <div class="form-group">
+                <label for="destiny_address">Direccion de envio</label>
+                <input type="text" class="input" id="destiny_address" placeholder="Ingrese su direccion">
+                <input type="hidden" id="destiny">
+            </div>
+            <button class="btn btn-primary btn-small">Calcular tarifa</button>
+            <a href="" class="btn">Cancelar</a>
+        </form>
+        <div class="mt-4">
+            <div id="result">
+                <ul class="list-group">
+                    <li id="in_mile" class="list-group-item d-flex justify-content-between align-items-center"></li>
+                    <br>
+                    <br>
+                    <br>
+                    <li id="in_kilo" class="list-group-item d-flex justify-content-between align-items-center"></li>
+                    <br>
+                    <br>
+                    <br>
+
+                    <li id="duration_text" class="list-group-item d-flex justify-content-between align-items-center">
+                    </li> <br>
+                    <br>
+                    <li id="price_text" class="list-group-item d-flex justify-content-between align-items-center">
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="key" data-value="{% get_env_var 'GOOGLE_MAP_KEY' %}"></div>
+{% endblock content %}
+
+{% block scripts %}
+<script>
+    (function () {
+        loadScript();
+    })()
+    function loadScript() {
+        // Create the script tag, set the appropriate attributes
+        var key = document.querySelector('#key');
+        var keyValue = key.dataset.value;
+        var script = document.createElement('script');
+        script.src = 'https://maps.googleapis.com/maps/api/js?libraries=places&key=' + keyValue + '&callback=initMap';
+        script.async = true;
+
+        // Attach your callback function to the `window` object
+        window.initMap = function () {
+            var myLatLng = {
+                lat: 52.520008,
+                lng: 13.404954
+            };
+            window.map = new google.maps.Map(document.getElementById('map'), { zoom: 16, center: myLatLng, });
+            setDestination();
+        };
+
+        // Append the 'script' element to 'head'
+        document.head.appendChild(script);
+    }
+    function setDestination() {
+        var from_places = new google.maps.places.Autocomplete(document.getElementById('origin_address'));
+        var to_places = new google.maps.places.Autocomplete(document.getElementById('destiny_address'));
+
+        google.maps.event.addListener(from_places, 'place_changed', function () {
+            var from_place = from_places.getPlace();
+            var from_address = from_place.formatted_address;
+            document.querySelector('#origin').value = from_address;
+        });
+
+        google.maps.event.addListener(to_places, 'place_changed', function () {
+            var to_place = to_places.getPlace();
+            var to_address = to_place.formatted_address;
+            document.querySelector('#destiny').value = to_address;
+        });
+    }
+    var form = document.querySelector('#form-address');
+    form.addEventListener('submit', function (ev) {
+        ev.preventDefault();
+        var origin_address = document.getElementById('origin').value;
+        var destiny_address = document.getElementById('destiny').value;
+        const travel_mode = 'DRIVING';
+        var directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': false });
+        var directionsService = new google.maps.DirectionsService();
+        displayRoute(travel_mode, origin_address, destiny_address, directionsService, directionsDisplay);
+        calculateDistance(travel_mode, origin_address, destiny_address);
+    });
+    function displayRoute(travel_mode, origin_address, destiny_address, directionsService, directionsDisplay) {
+        directionsService.route({
+            origin: origin_address,
+            destination: destiny_address,
+            travelMode: travel_mode,
+            avoidTolls: true
+        }, function (response, status) {
+            if (status === 'OK') {
+                directionsDisplay.setMap(map);
+                directionsDisplay.setDirections(response);
+            } else {
+                directionsDisplay.setMap(null);
+                directionsDisplay.setDirections(null);
+                alert('Could not display directions due to: ' + status);
+            }
+        });
+    }
+    function calculateDistance(travel_mode, origin_address, destiny_address) {
+        var DistanceMatrixService = new google.maps.DistanceMatrixService();
+        DistanceMatrixService.getDistanceMatrix(
+            {
+                origins: [origin_address],
+                destinations: [destiny_address],
+                travelMode: google.maps.TravelMode[travel_mode],
+                unitSystem: google.maps.UnitSystem.IMPERIAL, // miles and feet.
+                // unitSystem: google.maps.UnitSystem.metric, // kilometers and meters.
+                avoidHighways: false,
+                avoidTolls: false
+            }, save_results);
+    }
+
+    // save distance results
+    function save_results(response, status) {
+
+        var result = document.getElementById('result');
+        if (status != google.maps.DistanceMatrixStatus.OK) {
+            // result.innerHTML = response.err;
+            console.log(response.error)
+        } else {
+            var origin = response.originAddresses[0];
+            var destination = response.destinationAddresses[0];
+            if (response.rows[0].elements[0].status === "ZERO_RESULTS") {
+                result.innerHTML = "Sorry , not available to use this travel mode between " + origin + " and " + destination;
+            } else {
+                var distance = response.rows[0].elements[0].distance;
+                var duration = response.rows[0].elements[0].duration;
+                var distance_in_kilo = distance.value / 1000; // the kilo meter
+                var distance_in_mile = distance.value / 1609.34; // the mile
+                var duration_text = duration.text;
+                appendResults(distance_in_kilo, distance_in_mile, duration_text);
+                // sendAjaxRequest(origin, destination, distance_in_kilo, distance_in_mile, duration_text);
+            }
+        }
+    }
+
+    // append html results
+    function appendResults(distance_in_kilo, distance_in_mile, duration_text) {
+        document.getElementById("result").classList.remove("hide");
+        document.getElementById('in_mile').innerHTML = "Distancia en millas: <span class='badge badge-pill badge-secondary'>" + distance_in_mile.toFixed(2) + "</span>";
+        document.getElementById('in_kilo').innerHTML = "Distancia en kilometros: <span class='badge badge-pill badge-secondary'>" + distance_in_kilo.toFixed(2) + "</span>";
+        document.getElementById('duration_text').innerHTML = "Tiempo de duracion: <span class='badge badge-pill badge-success'>" + duration_text + "</span>";
+        let price = 0.0;
+        getRatePrices().forEach(function(rate){
+            if(distance_in_kilo >= rate.min & (distance_in_kilo <= rate.max | distance_in_kilo >= rate.max)){
+                price = rate.price;
+            }
+        });
+        document.getElementById('price_text').innerHTML = '<h5>Precio de tarifa: S/.'+price+'</h5>';
+    }
+    function getRatePrices() {
+        return [
+            {
+                min: 0,
+                max: 15,
+                price: 10
+            },
+            {
+                min: 15,
+                max: 35,
+                price: 12
+            },
+            {
+                min: 35,
+                max: 100,
+                price: 15
+            },
+        ];
+    }
+</script>
+<style>
+    #map {
+        width: 70%;
+        height: 500px;
+    }
+</style>
+{% endblock %}
