--- a/templates/layouts/pages.html
+++ b/templates/layouts/pages.html
@@ -16,5 +16,7 @@
   <body>
     {% include "partials/message.html" %}
     {% block content %} {% endblock content %}
+
+    {% block scripts %} {% endblock scripts %}
   </body>
 </html>
